// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Set.prototype.forEach cannot be "referenced" 1`] = `
"snippetCode.ts (3,19): Builtin properties cannot be referenced

      1 | 
      2 |       const x = new Set<number>();
    > 3 |       const y = x['forEach'];
        |                   ^
      4 |     
"
`;

exports[`Set.prototype.forEach cannot be referenced 1`] = `
"snippetCode.ts (3,19): Builtin properties cannot be referenced

      1 | 
      2 |       const x = new Set<number>();
    > 3 |       const y = x.forEach;
        |                   ^
      4 |     
"
`;
